# ArtificialNeuralNetwork

./: .editorconfig  .gitignore  README.md  fulltraining_model.json  iris.ipynb  main.ipynb  main.py  pyproject.toml  relu_model.json  softmax.ipynb  softmax2_model.json  softmax_model.json
src/: ANN.py  __init__.py  activation.py  dump.py  encoder.py  loss.py  metrics.py  utils.py
