[tool.poetry]
name = "artificialneuralnetwork"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
jupyter = "^1.0.0"
pandas = "^1.4.1"
sklearn = "^0.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
